Fix overflow on dropdown menus

--- a/daiquiri/core/static/core/css/base.scss
+++ b/daiquiri/core/static/core/css/base.scss
@@ -146,6 +146,11 @@ blockquote {
             }
 
             .dropdown-menu {
+                @media (min-width: $screen-xs-max) {
+                    max-height: 600px;
+                    overflow-y: scroll;
+                }
+
                 > li {
                     > a,
                     > a:focus,
@@ -158,7 +163,7 @@ blockquote {
                         background-color: $navigation-dropdown-hover-background-color;
                     }
 
-                    @media (max-width: $screen-sm-max) {
+                    @media (max-width: $screen-xs-max) {
                         // same as .navbar-nav li a
                         > a,
                         > a:focus,
@@ -197,7 +202,7 @@ blockquote {
                             background-color: $navigation-dropdown-hover-background-color;
                         }
 
-                        @media (max-width: $screen-sm-max) {
+                        @media (max-width: $screen-xs-max) {
                         // same as .navbar-nav li a
                             > a,
                             > a:focus,
